[gd_scene load_steps=6 format=3 uid="uid://bvyrp7ip4aw88"]

[ext_resource type="Script" path="res://addons/src/scripts/DialogueTextEntry.gd" id="1_ebg2r"]

[sub_resource type="Gradient" id="Gradient_jsg8m"]
offsets = PackedFloat32Array(0.558442)
colors = PackedColorArray(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b46qh"]
gradient = SubResource("Gradient_jsg8m")
width = 1152
height = 400
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_fyu02"]
offsets = PackedFloat32Array(0.519481)
colors = PackedColorArray(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isuox"]
gradient = SubResource("Gradient_fyu02")

[node name="DialogueTextEntry" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -36.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b46qh")
stretch_mode = 2
script = ExtResource("1_ebg2r")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 14.0
offset_right = 1098.0
offset_bottom = 387.0
texture = SubResource("GradientTexture1D_isuox")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
offset_left = 965.0
offset_top = 29.0
offset_right = 1079.0
offset_bottom = 76.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "DELETE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 19.0
offset_right = 931.0
offset_bottom = 380.0

[node name="SpeakerInput" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="TextTag" type="RichTextLabel" parent="VBoxContainer/SpeakerInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Speaker name"
fit_content = true

[node name="TextInput" type="LineEdit" parent="VBoxContainer/SpeakerInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57
placeholder_text = "Text"

[node name="SpeakerRightToggle" type="CheckButton" parent="VBoxContainer/SpeakerInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
theme_override_font_sizes/font_size = 24
text = "Right side speaker?"

[node name="TextInput" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51

[node name="TextTag" type="RichTextLabel" parent="VBoxContainer/TextInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Dialogue text"
fit_content = true

[node name="TextInput" type="TextEdit" parent="VBoxContainer/TextInput"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.75
placeholder_text = "text"
wrap_mode = 1

[node name="BoxControl" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 105.0
offset_right = 94.0
offset_bottom = 285.0

[node name="MoveUpButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 64
text = "^"

[node name="MoveDownButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "V"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="button_up" from="DeleteButton" to="." method="OnDelete"]
[connection signal="button_up" from="BoxControl/MoveUpButton" to="." method="OnMoveUp"]
[connection signal="button_up" from="BoxControl/MoveDownButton" to="." method="OnMoveDown"]
